--- a/package.json
+++ b/package.json
@@ -24,25 +24,34 @@
   },
   "homepage": "https://github.com/tryber/sd-0x-cookmaster-v2#readme",
   "dependencies": {
+    "@types/node": "^16.11.6",
+    "async-mutex": "^0.3.2",
     "body-parser": "1.19.0",
+    "buffer": "^6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
-    "frisby": "2.1.2",
+    "fd-slicer": "^1.1.0",
+    "frisby": "^2.1.2",
+    "fs-constants": "^1.0.0",
+    "get-port": "^6.0.0",
     "jest": "26.4.1",
+    "joy": "^0.1.1",
     "jsonwebtoken": "8.5.1",
-    "mongodb": "3.5.9",
+    "mongodb": "^3.5.9",
     "multer": "1.4.2",
+    "nodejs-base64": "^2.0.0",
     "nodemon": "2.0.4",
-    "shelljs": "0.8.4"
+    "shelljs": "0.8.4",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "chai": "4.3.4",
-    "chai-http": "4.3.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
     "mocha": "9.0.0",
     "mongodb-memory-server": "^6.9.6",
     "nyc": "15.1.0",
-    "sinon": "11.1.1"
+    "sinon": "^11.1.1"
   }
 }
