--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "nodejs-base64": "^2.0.0",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "wait-on": "^6.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
